// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PianoKey /> renders active after onMouseDown 1`] = `
<div
  className="piano-key  piano-key--active"
  label="piano-key"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="button"
  tabIndex={0}
  type="button"
/>
`;

exports[`<PianoKey /> renders active after onMouseOver 1`] = `
<div
  className="piano-key  piano-key--active"
  label="piano-key"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="button"
  tabIndex={0}
  type="button"
/>
`;

exports[`<PianoKey /> renders inactive after onMouseDown and onMouseUp 1`] = `
<div
  className="piano-key  "
  label="piano-key"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="button"
  tabIndex={0}
  type="button"
/>
`;

exports[`<PianoKey /> renders inactive after onMouseOver and onMouseLeave 1`] = `
<div
  className="piano-key  "
  label="piano-key"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="button"
  tabIndex={0}
  type="button"
/>
`;

exports[`<PianoKey /> renders with basic props 1`] = `
<div
  className="piano-key  "
  label="piano-key"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="button"
  tabIndex={0}
  type="button"
/>
`;

exports[`<PianoKey /> renders with custom class 1`] = `
<div
  className="piano-key custom-class "
  label="piano-key"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onMouseUp={[Function]}
  role="button"
  tabIndex={0}
  type="button"
/>
`;
